objects/ASI_CRM_Investment_Payment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Investment Payments</relationshipLabel>
        <relationshipName>Investment_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Marketing_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Investment Payment</label>
    <listViews>
        <fullName>ASI_CRM_All_MO_Investment_Payments</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Payment_Type__c</columns>
        <columns>ASI_CRM_A_C_Code__c</columns>
        <columns>ASI_CRM_Marketing_Approval__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Investment_Payment__c.ASI_CRM_MO_Investment_Payment</value>
        </filters>
        <label>All MO Investment Payments</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MO_Power_Users</group>
            <group>ASI_CRM_MO_Standard_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Investment Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Payments</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MO_Investment_Payment</fullName>
        <active>true</active>
        <label>ASI CRM MO Investment Payment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>